Implement context read controller
