# doc/swagger.yaml
@@ -16,7 +16,9 @@ paths:
   /context/{label}:
     get:
       operationId: src.read_context
-      description: Retrieve context by context label.
+      description: >
+        Retrieve context by context label. Only the variables for the top-level
+        context are provided.
       parameters:
       - name: label
         in: path
@@ -26,7 +28,7 @@ paths:
       - name: depth
         in: query
         type: integer
-        default: 1
+        default: 0
         description: Number of included context levels
       responses:
         200:
@@ -38,11 +40,11 @@ paths:
           schema:
             $ref: '#/definitions/Status'
 
-  /context:
+  /context/:
     # Retrieve root context.
     get:
       operationId: src.read_root_context
-      description: Retrieve root context.
+      description: Retrieve root context. No variable information is provided.
       parameters:
       - name: depth
         in: query
@@ -104,7 +106,7 @@ paths:
           schema:
             $ref: '#/definitions/Status'
 
-  /variable:
+  /variable/:
     # Find variables using SymPy expression query.
     get:
       operationId: src.find_variables
@@ -151,7 +153,7 @@ paths:
           schema:
             $ref: '#/definitions/Status'
 
-  /derivation:
+  /derivation/:
     # Find derivations using SymPy expression query.
     get:
       operationId: src.find_derivations
@@ -219,8 +221,6 @@ definitions:
   # Equation context (imposes it's own variables and implementations)
   Context:
     type: object
-    required:
-    - label
     properties:
       id:
         type: integer
